// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationDrawer renders empty state 1`] = `
<div
  className="m-notification-drawer"
>
  <div
    className="c-view-header"
  >
    <h2
      className="c-view-header__title"
    >
      Notifications
    </h2>
    <button
      aria-label="Close"
      className="c-close-button c-close-button--x-large c-close-button--light"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        aria-label=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg/>",
          }
        }
        role="img"
      />
    </button>
  </div>
  <div
    className="m-notification-drawer__content"
  >
    <p>
      You have no notifications currently.
    </p>
    <p>
      Here you'll be notified about events like accidents and ghost vehicles on any bus routes you have selected on the Route Ladders page.
    </p>
  </div>
</div>
`;

exports[`NotificationDrawer renders notifications 1`] = `
<div
  className="m-notification-drawer"
>
  <div
    className="c-view-header"
  >
    <h2
      className="c-view-header__title"
    >
      Notifications
    </h2>
    <button
      aria-label="Close"
      className="c-close-button c-close-button--x-large c-close-button--light"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        aria-label=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg/>",
          }
        }
        role="img"
      />
    </button>
  </div>
  <div
    className="m-notification-drawer__content"
  >
    <div
      className="m-notification-drawer__cards"
    >
      <div
        className="m-notification-drawer__header"
      >
        <span
          className="m-notification-drawer__n-unread"
        >
          1
           new
        </span>
        <button
          className="m-notification-drawer__mark-all-read-button"
          onClick={[Function]}
        >
          Mark all as read
        </button>
      </div>
      <ul>
        <li>
          <div
            aria-labelledby="card-label-:r0:"
            className="c-card c-card--kiwi"
          >
            <button
              className="c-card__left"
              onClick={[Function]}
            >
              <div
                className="c-card__left-content"
              >
                <div
                  className="c-card__top-row"
                >
                  <div
                    className="c-card__title"
                    id="card-label-:r0:"
                  >
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<svg/>",
                        }
                      }
                    />
                    No Operator
                  </div>
                  <div
                    className="c-card__time"
                  >
                    0 min
                  </div>
                </div>
                <div
                  className="c-card__contents"
                >
                  <div
                    className="c-card__body"
                  >
                    OCC reported that an operator is not available on the r1, r2.
                  </div>
                  <div
                    className="m-properties-list"
                  >
                    <table
                      className="m-properties-list__table"
                    >
                      <tbody>
                        <tr
                          className="m-properties-list__property "
                        >
                          <td
                            className="m-properties-list__property-label"
                          >
                            Run
                          </td>
                          <td
                            className="m-properties-list__property-value"
                          >
                            run1, run2
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
